Update style.css to fix overflowing

--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
 html {
     scroll-behavior: smooth;
 }
-
+html, body {
+    overflow-x: hidden;
+}
 section {
     padding: 60px 0;
 }
